--- a/package.json
+++ b/package.json
@@ -7,5 +7,25 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "5.1.1",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "express-fileupload": "1.4.0",
+    "joi": "17.10.1",
+    "jsonwebtoken": "9.0.2",
+    "morgan": "1.10.0",
+    "mysql2": "3.6.0",
+    "sharp": "0.32.5"
+  },
+  "devDependencies": {
+    "eslint": "8.48.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-n": "16.0.2",
+    "eslint-plugin-promise": "6.1.1",
+    "nodemon": "3.0.1"
+  }
 }
