--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "the-real-deal",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev: "nodemon ./backend/server.js"
   },
   "author": "",
   "license": "ISC",
