--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev: "nodemon ./backend/server.js"
+    "dev": "nodemon ./backend/server.js"
   },
   "author": "",
   "license": "ISC",
