--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "9.0.2",
     "morgan": "1.10.0",
     "mysql2": "3.6.0",
+    "nodemailer": "6.9.5",
     "sharp": "0.32.5"
   },
   "devDependencies": {
