--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "1.10.0",
     "mysql2": "3.6.0",
     "nodemailer": "6.9.5",
+    "randomstring": "1.3.0",
     "sharp": "0.32.5"
   },
   "devDependencies": {
