--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.11",
+    "@mui/x-date-pickers": "^6.16.0",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.9.0",
