--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.11",
-    "@mui/x-date-pickers": "^6.16.0",
-    "bootstrap": "^5.3.2",
-    "dayjs": "^1.11.10",
-    "prop-types": "^15.8.1",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@mui/material": "5.14.11",
+    "@mui/x-date-pickers": "6.16.0",
+    "@react-google-maps/api": "^2.19.2",
+    "bootstrap": "5.3.2",
+    "dayjs": "1.11.10",
+    "prop-types": "15.8.1",
     "react": "18.2.0",
-    "react-bootstrap": "^2.9.0",
+    "react-bootstrap": "2.9.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0"
+    "react-icons": "4.11.0",
+    "react-router-dom": "6.16.0"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
